--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
+  "name": "qurehealth-ai-monorepo",
+  "version": "1.0.0",
+  "scripts": {
+    "dev:backend": "cd backend && npm run dev",
+    "dev:patient": "cd patientFrontend && npm run dev",
+    "dev:doctor": "cd doctorFrontend && npm run dev",
+    "dev:admin": "cd adminFrontend && npm run dev",
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:patient\" \"npm run dev:doctor\" \"npm run dev:admin\""
+  },
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18"
