--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
     "multer": "^2.0.2",
+    "nodemailer": "^8.0.1",
     "react-router-dom": "^7.11.0"
   },
   "name": "qurehealthai",
